--- a/website_snippet_code/views/snippet_templates.xml
+++ b/website_snippet_code/views/snippet_templates.xml
@@ -23,38 +23,27 @@
     <template id="snippet_code_opt" name="Snippet Code Options" inherit_id="website.snippet_options">
         <xpath expr="//div[@data-js='background']" position="before">
             <div data-selector=".o_website_snippet_code"> <!-- Options group -->
-                <div class="dropdown-submenu">
-                    <a tabindex="-2" href="#" class="dropdown-item"><i class="fa fa-sun-o"/>Syntax</a>
-                    <div class="dropdown-menu">
-                        <a href="#" class="dropdown-item" data-select-class="auto">Automatic</a>
-                        <a href="#" class="dropdown-item" data-select-class="plaintext">Plain Text</a>
-                        <a href="#" class="dropdown-item" data-select-class="python">Python</a>
-                        <a href="#" class="dropdown-item" data-select-class="xml">HTML, XML</a>
-                        <a href="#" class="dropdown-item" data-select-class="css">CSS</a>
-                        <a href="#" class="dropdown-item" data-select-class="javascript">Javascript</a>
-                        <a href="#" class="dropdown-item" data-select-class="coffeescript">CoffeeScript</a>
-                        <a href="#" class="dropdown-item" data-select-class="java">Java</a>
-                        <a href="#" class="dropdown-item" data-select-class="ruby">Ruby</a>
-                        <a href="#" class="dropdown-item" data-select-class="markdown">Markdown</a>
-                        <a href="#" class="dropdown-item" data-select-class="php">PHP</a>
-                        <a href="#" class="dropdown-item" data-select-class="objectivec">Objective-C</a>
-                        <a href="#" class="dropdown-item" data-select-class="bash">Bash</a>
-                        <a href="#" class="dropdown-item" data-select-class="shell">Shell Session</a>
-                        <a href="#" class="dropdown-item" data-select-class="sql">SQL</a>
-                        <a href="#" class="dropdown-item" data-select-class="json">JSON</a>
-                        <a href="#" class="dropdown-item" data-select-class="cs">C#</a>
-                        <a href="#" class="dropdown-item" data-select-class="cpp">C++</a>
-                        <a href="#" class="dropdown-item" data-select-class="perl">Perl</a>
-                        <a href="#" class="dropdown-item" data-select-class="diff">Diff</a>
-                        <a href="#" class="dropdown-item" data-select-class="http">HTTP</a>
-                        <a href="#" class="dropdown-item" data-select-class="properties">Properties</a>
-                        <a href="#" class="dropdown-item" data-select-class="ini">Ini, TOML</a>
-                        <a href="#" class="dropdown-item" data-select-class="nginx">Nginx</a>
-                        <a href="#" class="dropdown-item" data-select-class="apache">Apache</a>
-                        <a href="#" class="dropdown-item" data-select-class="makefile">Makefile</a>
-                        <a href="#" class="dropdown-item" data-select-class="nohighlight">No Highlighting</a>
-                    </div>
-                </div>
+                <we-collapse-area>
+                    <we-toggler><i class="fa fa-fw fa-sun-o"/>Syntax</we-toggler>
+                    <we-collapse>
+                        <we-button data-select-class="auto">Automatic</we-button>
+                        <we-button data-select-class="plaintext">plaintext</we-button>
+                        <we-button data-select-class="python">Python</we-button>
+                        <we-button data-select-class="xml">HTML, XML</we-button>
+                        <we-button data-select-class="css">CSS</we-button>
+                        <we-button data-select-class="javascript">Javascript</we-button>
+                        <we-button data-select-class="coffeescript">CoffeeScript</we-button>
+                        <we-button data-select-class="java">Java</we-button>
+                        <we-button data-select-class="ruby">Ruby</we-button>
+                        <we-button data-select-class="markdown">Markdown</we-button>
+                        <we-button data-select-class="php">PHP</we-button>
+                        <we-button data-select-class="objectivec">Objective-C</we-button>
+                        <we-button data-select-class="bash">Bash</we-button>
+                        <we-button data-select-class="shell">Shell Session</we-button>
+                        <we-button data-select-class="sql">SQL</we-button>
+                        <we-button data-select-class="nohighlight">No Highlighting</we-button>
+                    </we-collapse>
+                </we-collapse-area>
                 <div data-js="snippet_code_options" data-selector=".o_website_snippet_code"/>
             </div>
         </xpath>
